Minor modifications to the pages

--- a/_posts/2016-06-10-first.md
+++ b/_posts/2016-06-10-first.md
@@ -1,5 +1,6 @@
 ---
 title: My first post
-desc: This is a sample for my first post.
+desc: Sample first.
 ---
+Adding content again as sample pages.
 
